--- a/.tmux.config
+++ b/.tmux.config
@@ -1,3 +1,5 @@
+display-message "Config loading..."
+
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
@@ -80,7 +82,7 @@ bind m set-window-option main-pane-height 60\; select-layout main-horizontal
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
 # reload config
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+bind r source-file ~/.tmux.config \; display-message "Config reloaded..."
 
 # auto window rename
 set-window-option -g automatic-rename
@@ -112,3 +114,8 @@ if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 
 
 # scroll within history of the output
 setw -g mode-mouse on
+
+# set mouse-mode on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
